# poinciana

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
benches/bench_data/: cancel.tree
src/: config.rs  error.rs  lib.rs  main.rs  span.rs  utils.rs
src/hir/: combiner.rs  hir.rs  mod.rs  translator.rs  visitor.rs
src/scaffold/: emitter.rs  mod.rs  modifiers.rs
src/syntax/: mod.rs
src/syntax/cairo/: db.rs
src/syntax/tree/: parser.rs  semantics.rs  tokenizer.rs  visitor.rs
tests/: common.rs  scaffold.rs
tests/scaffold/: basic.t.cairo  complex.t.cairo  hash_pair.t.cairo  multiple_roots.t.cairo  removes_invalid_title_chars.t.cairo  removes_invalid_title_chars.tree  revert_when.t.cairo  spurious_comments.t.cairo
